# WinService_CXX20

./: .gitignore  CMakeLists.txt  SampleService.cpp  SampleService.h  ServiceBase.cpp  ServiceBase.h  ServiceInstaller.cpp  ServiceInstaller.h  ThreadPool.h  main.cpp
